# rustyrouter

./: Cargo.toml  Makefile  Makefile.rpi  README.md  build_initramfs.sh  router_spec.md  run_qemu.sh  sd_card_image_spec.md  test_qemu.sh
.agents/skills/commit_helper/: SKILL.md
.agents/skills/rust_guidelines/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
src/: config.rs  kmod.rs  main.rs  netfilter.rs  network.rs  packet.rs  reaper.rs  signal.rs  system.rs
src/services/: dhcp_client.rs  dhcp_server.rs  dns_forwarder.rs  mod.rs  sntp_client.rs  utils.rs
tests/: wan_dhcp_test.rs
